// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bcHOTY sc-gsMHZj giMMzD jZqkRj"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bcHOTY sc-gsMHZj etVWCg jZqkRj"
>
  foo
</button>
`;
